--- a/src/views/admin/admin.css
+++ b/src/views/admin/admin.css
@@ -163,14 +163,18 @@ body {
         font-size: 16px;
         overflow: visible;
     }
-}
+}/*
 .btn-cargar-cursos
 {
     color: #fff;
     background-color: #ECA100;
     border-color: #007bff;
 }
-
+.form-control {
+    display: block;
+    width: 37%;
+    
+}
 .form
 {
     height: 250%;
@@ -200,6 +204,72 @@ label{
     border-bottom:0px;
     height: 250%;
     width: 250%;
+}
+.tab-pane
+{
+    height: 250%;
+    width: 250%;
+}*/
+.form{
+    width: 250%;
+}
+.btn-cargar-cursos
+{
+    color: #fff;
+    background-color: #ECA100;
+    border-color: #060C2D;
+}
+.myTab{
+    margin-left: auto;
+}
+.form-control
+{
+    width: 58%;
+}
+.main-section{
+    margin:auto;
+    margin-top:12%;
+    
+}
+
+.tab-content{
+    padding: 2em;
+}
+.card{
+
+    height: 150%;
+    width: 150%;
+    opacity: .95;
+}
+.card-body{
+    background-color: #d1d3d6;
+    box-shadow: 0px 0px 3px #848484;
+}
+
+label{
+    font-weight: bold;
+}
+/*form configuracion*/
+.modal-content{
+    padding: 2em;
+}
+.modal-body{
+    position: relative;
+    top: -20px;
+    left: -250px;
+
+}
+
+.nav-tabs .nav-item a:not(.active){
+    background-color: #d1d3d6;
+}
+
+
+.nav-tabs{
+    border-bottom:0px;
+    height: 250%;
+    width: 250%;
+    padding: auto;
 }
 .tab-pane
 {
