--- a/src/views/docente/main.css
+++ b/src/views/docente/main.css
@@ -11,7 +11,13 @@ body {
 }
 /* css en el header*/
 .navbar {
-  background-color: var(--dark);
+  
+  background: #ED9B40;
+    padding-top: 15px;
+    margin: 0;
+    color: #062236;
+    
+    padding-bottom: 10px;
 }
 
 /*color de los botones*/
@@ -19,6 +25,9 @@ body {
     background-color: #e38307;
     border-color: transparent;
     color: #fff;
+}
+.bi-house {
+    left: 50px;
 }
 
 .navbar-item {
@@ -36,7 +45,7 @@ body {
 .main-content {
   height: 92vh;
   display: flex;
-  justify-content: center;
+  
   align-items: center;
 }
 
