--- a/src/views/docente/configuracion.html
+++ b/src/views/docente/configuracion.html
@@ -90,14 +90,6 @@
                                     <form id="formDocente" class="form" role="form" autocomplete="off">
                                         <div class="form-group row">
                                             <label
-                                                class="col-lg-3 col-form-label form-control-label">Codigo</label>
-                                            <div class="col-lg-9">
-                                                <input type="text" id="codigo" placeholder="Codigo"
-                                                    class="form-control" autofocus>
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
-                                            <label
                                                 class="col-lg-3 col-form-label form-control-label">Contraseña</label>
                                             <div class="col-lg-9">
                                                 <input type="password" id="password"
@@ -106,18 +98,9 @@
                                         </div>
                                         <div class="form-group row">
                                             <label
-                                                class="col-lg-3 col-form-label form-control-label">Nombres</label>
+                                                class="col-lg-3 col-form-label form-control-label">Regimen</label>
                                             <div class="col-lg-9">
-                                                <input type="text" id="nombres" placeholder="Nombres"
-                                                    class="form-control">
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
-                                            <label
-                                                class="col-lg-3 col-form-label form-control-label">Escuela
-                                                Profesional</label>
-                                            <div class="col-lg-9">
-                                                <input type="text" id="codigo-ep" placeholder="Codigo EP"
+                                                <input type="text" id="regimen" placeholder="Regimen"
                                                     class="form-control">
                                             </div>
                                         </div>
@@ -133,12 +116,12 @@
                                                 </datalist>
                                             </div>
                                         </div>
+                                        <div class="modal-footer">
+                                            <button type="submit" class="btn btn-primary">GUARDAR</button>
+                                        </div>
                                     </form>
                                 </div>
                             </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary">GUARDAR</button>
                         </div>
                             
                     </div>
@@ -150,7 +133,7 @@
     </div>
 
 
-    <script type="module" src="../../database/admin/docente.js"></script>
+    <script type="module" src="../../database/docente/configuracion.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
