arreglo en la asistencia

--- a/src/views/docente/RegistroAsistencia.html
+++ b/src/views/docente/RegistroAsistencia.html
@@ -42,8 +42,10 @@
         </div>
       </nav>
   </header>
-    <main class="main-content">
-        <div class="Asist-container">
+  <main  class="main col">
+    <div class="row justify-content-center align-content-center text-center">
+        <div class="columna col-lg-6">
+          <div class="Asist-container">
             <div class="columna">
               <form id="formCargaAlumnos" class="form" role="form" autocomplete="off">
                   <div class="container card p-3">
@@ -73,7 +75,7 @@
                     <th>Apellido M</th>
                     <th>Nombres</th>
                     <th>Asistencia</th>
-                    <th>Asistencia</th>
+                    
                   </tr>
                 </thead>
             
@@ -89,6 +91,12 @@
                 </div>
             </div>
         </div>
+        </div>
+    </div>
+    
+</main>
+    <main class="main-content">
+        
     </main>
 
 
