funcion guardado de asistencia de un alumno

--- a/src/views/docente/RegistroAsistencia.html
+++ b/src/views/docente/RegistroAsistencia.html
@@ -65,6 +65,14 @@
                   </button>
               </form>
             </div>
+            <div class="p-4">
+              <p>Seleccione fecha para llamar Asistencia</p>
+            </div>
+            <div class="p-4">
+              <form id="formFecha" class="form" role="form">
+                <input type="date" id="fecha-lista" class="sm-form-control">
+              </form>
+            </div>
 
             <table class="table" id="tablaTitulo">
                 <thead>
@@ -83,14 +91,8 @@
                     class="table table-bordered table-hover table-striped">
                 </table>
               </table>
-              <div class="col_one_third col_last c-azul">
-                <div  class="subir"> 
-                  <label for="nacimiento"><small></small></label>
-                  <input type="date" id="nacimiento"    class="sm-form-control">
-                  <button class="button is-success" id="openFecha"  type="submit">Fecha Nueva</button>
-                </div>
-            </div>
-        </div>
+              
+          </div>
         </div>
     </div>
     
