--- a/src/views/docente/contenido_academico.html
+++ b/src/views/docente/contenido_academico.html
@@ -11,7 +11,7 @@
       <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
       
       <script src="https://unpkg.com/read-excel-file@4.x/bundle/read-excel-file.min.js"></script>
-      <title>Asistencia de Alumnos</title>
+      <title>Contenido Academico</title>
       
       <!-- FIREBASE -->
       <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -47,47 +47,36 @@
         <div class="columna col-lg-6">
           <div class="Asist-container">
             <div class="columna">
-              <form id="formCargaAlumnos" class="form" role="form" autocomplete="off">
+              <form id="formCargaContenidoAca" class="form" role="form" autocomplete="off">
                   <div class="container card p-3">
                       <div class="card-header p-2">
-                          <h4>Subir alumnos de curso</h4>
+                          <h4>Subir Contenido Academico</h4>
                       </div>
                       <div>
-                          <input type="file" id="inputfile-Alumnos" class="p-2">
+                          <input type="file" id="inputfile-ContenidoAca" class="p-2">
                       </div>
                   </div>
                   <div class="table-responsive">
-                      <table id="prelista-alumnos" class="table table-bordered table-hover table-striped">   
+                      <table id="prelista-ContenidoAca" class="table table-bordered table-hover table-striped">   
                       </table>
                   </div>
-                  <button id="btn-cargar-alumnos" class="btn btn-primary p-2" type="submit">
+                  <button id="btn-cargar-ContenidoAca" class="btn btn-primary p-2" type="submit">
                       Cargar
                   </button>
               </form>
             </div>
-            <div class="p-4">
-              <p>Seleccione fecha para llamar Asistencia</p>
-            </div>
-            <div class="p-4">
-              <form id="formFecha" class="form" role="form">
-                <input type="date" id="fecha-lista" class="sm-form-control">
-              </form>
-            </div>
-
             <table class="table" id="tablaTitulo">
                 <thead>
                   <tr>
-                    <th>Numero</th>
-                    <th>Codigo</th>
-                    <th>Apellido P</th>
-                    <th>Apellido M</th>
-                    <th>Nombres</th>
-                    <th>Asistencia</th>
-                    
+                    <th>Fecha</th>
+                    <th>Tema</th>
+                    <th>Horas Planificadas</th>
+                    <th>Horas Realizadas</th>
+                    <th>Observaciones</th>               
                   </tr>
                 </thead>
             
-                <table id="lista-acs"
+                <table id="lista-temas"
                     class="table table-bordered table-hover table-striped">
                 </table>
               </table>
@@ -110,6 +99,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script type="text/javascript"src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script type="module" src="../../database/docente/cargaalumnos.js"></script>
+    <script type="module" src="../../database/docente/Contenido.js"></script>
+
   </body>
 </html>
