--- a/src/views/docente/main.css
+++ b/src/views/docente/main.css
@@ -10,6 +10,10 @@ body {
   font-family: "Comfortaa", cursive;
 }
 /* css en el header*/
+.col-4 {
+  flex: 0 0 auto;
+  width: 8%;
+}
 .navbar {
   
   background: #ED9B40;
