--- a/src/views/docente/style.css
+++ b/src/views/docente/style.css
@@ -53,7 +53,7 @@ body {
 /*BARRA LATERAL*/
 
 .barra-lateral {
-    background: #11075C;
+    background: #060C2D;
     color: #fff;
     min-width: 350px;
     min-height: 200vh;
