prueba del sprint 5

--- a/src/views/docente/contenido_academico.html
+++ b/src/views/docente/contenido_academico.html
@@ -63,19 +63,16 @@
                   <button id="btn-cargar-ContenidoAca" class="btn btn-primary p-2" type="submit">
                       Cargar
                   </button>
+
+                  <form id="formBotonDescargarArchivo" method="get" action="file.doc">
+                    <a href="../docente/pruebacontenido.xlsx" download="pruebacontenido.xlsx">Descargar Archivo modelo</a>
+                 </form>
+
+
               </form>
             </div>
             <table class="table" id="tablaTitulo">
-                <thead>
-                  <tr>
-                    <th>Fecha</th>
-                    <th>Tema</th>
-                    <th>Horas Planificadas</th>
-                    <th>Horas Realizadas</th>
-                    <th>Observaciones</th>               
-                  </tr>
-                </thead>
-            
+                           
                 <table id="lista-temas"
                     class="table table-bordered table-hover table-striped">
                 </table>
