--- a/src/views/docente/RegistroAsistencia.html
+++ b/src/views/docente/RegistroAsistencia.html
@@ -13,6 +13,29 @@
       <script src="https://unpkg.com/read-excel-file@4.x/bundle/read-excel-file.min.js"></script>
       <title>Asistencia de Alumnos</title>
       
+      <!--JQUERY-->
+      <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+      <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
+      <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+      <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+      <script 
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script 
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+      <!-- Los iconos tipo Solid de Fontawesome-->
+      <link rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+      <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+
+      <!-- Nuestro css-->
+      <link rel="stylesheet" href="style.css">
+
       <!-- FIREBASE -->
       <!-- The core Firebase JS SDK is always required and must be listed first -->
       <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
@@ -42,74 +65,92 @@
         </div>
       </nav>
   </header>
-  <main  class="main col">
-    <div class="row justify-content-center align-content-center text-center">
-        <div class="columna col-lg-6">
-          <div class="Asist-container">
-            <div class="columna">
-              <form id="formCargaAlumnos" class="form" role="form" autocomplete="off">
-                  <div class="container card p-3">
-                      <div class="card-header p-2">
-                          <h4>Subir alumnos de curso</h4>
-                      </div>
-                      <div>
-                          <input type="file" id="inputfile-Alumnos" class="p-2">
-                      </div>
-                  </div>
-                  <div class="table-responsive">
-                      <table id="prelista-alumnos" class="table table-bordered table-hover table-striped">   
-                      </table>
-                  </div>
-                  <button id="btn-cargar-alumnos" class="btn btn-primary p-2" type="submit">
-                      Cargar
-                  </button>
-              </form>
-            </div>
-            <div class="p-4">
-              <p>Seleccione fecha para llamar Asistencia</p>
-            </div>
-            <div class="p-4">
-              <form id="formFecha" class="form" role="form">
-                <input type="date" id="fecha-lista" class="sm-form-control">
-              </form>
-            </div>
-
-            <table class="table" id="tablaTitulo">
-                <thead>
-                  <tr>
-                    <th>Numero</th>
-                    <th>Codigo</th>
-                    <th>Apellido P</th>
-                    <th>Apellido M</th>
-                    <th>Nombres</th>
-                    <th>Asistencia</th>
-                    
-                  </tr>
-                </thead>
-            
-                <table id="lista-acs"
-                    class="table table-bordered table-hover table-striped">
-                </table>
-              </table>
-              
-          </div>
+  
+  <div class="container-fluid">
+    <div class="row">
+        <div class="barra-lateral col-12 col-sm-auto">
+            <nav class="menu d-flex d-sm-block justify-content-center flex-wrap">
+                <a href="RegistroAsistencia.html"></i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
+                    <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+                  </svg><span>   Resgistro</span></a>
+                  <a href="informeAsistencia.html"></i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-bookmark" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M6 8V1h1v6.117L8.743 6.07a.5.5 0 0 1 .514 0L11 7.117V1h1v7a.5.5 0 0 1-.757.429L9 7.083 6.757 8.43A.5.5 0 0 1 6 8z"/>
+                    <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2z"/>
+                    <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1H1z"/>
+                  </svg><span>   Informe</span></a>
+            </nav>
         </div>
-    </div>
-    
-</main>
-    <main class="main-content">
+        <main  class="main col">
+          <div class="columna">
+            <div class="Asist-container">
+              <div class="columna">
+                <form id="formCargaAlumnos" class="form" role="form" autocomplete="off">
+                    <div class=" card p-3">
+                        <div class="card-header p-2">
+                            <h4>Subir alumnos de curso</h4>
+                        </div>
+                        <div>
+                            <input type="file" id="inputfile-Alumnos" class="p-2">
+                        </div>
+                    </div>
+                    <div class="table-responsive">
+                        <table id="prelista-alumnos" class="table table-bordered table-hover table-striped">   
+                        </table>
+                    </div>
+                    <button id="btn-cargar-alumnos" class="btn btn-primary p-2" type="submit">
+                        Cargar
+                    </button>
+                </form>
+              </div>
+              <div class="p-4">
+                <p>Seleccione fecha para llamar Asistencia</p>
+              </div>
+              <div class="p-4">
+                <form id="formFecha" class="form" role="form">
+                  <input type="date" id="fecha-lista" class="sm-form-control">
+                </form>
+              </div>
+  
+              <table class="table" id="tablaTitulo">
+                  <thead>
+                    <tr>
+                      <th>Numero</th>
+                      <th>Codigo</th>
+                      <th>Apellido P</th>
+                      <th>Apellido M</th>
+                      <th>Nombres</th>
+                      <th>Asistencia</th>
+                      
+                    </tr>
+                  </thead>
+              
+                  <table id="lista-acs"
+                      class="table table-bordered table-hover table-striped">
+                  </table>
+                </table>
+                
+            </div>
+          </div>
+            
+        </main>
         
-    </main>
-
+    </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
       
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script type="text/javascript"src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script type="module" src="../../database/docente/cargaalumnos.js"></script>
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/646c794df3.js"></script>
   </body>
 </html>
