aun no funciona

--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -37,7 +37,7 @@
               placeholder="Contraseña"
               class="form-control"
             />
-            <a href="#">Olvidaste tu contraseña</a>
+            <a href="forgot-password.html">Olvidaste tu contraseña</a>
             <button id="btn-login-docente" class="btn btn-primary p-1" type="submit">
               Sing In
             </button>
@@ -58,7 +58,7 @@
               placeholder="Contraseña"
               class="form-control"
             />
-            <a href="#">Olvidaste tu contraseña</a>
+            <a href="forgot-password.html">Olvidaste tu contraseña</a>
             <button id="btn-login-admin" class="btn btn-primary p-1" type="submit">
               Sign In
             </button>
