--- a/src/views/login/forgot-password.html
+++ b/src/views/login/forgot-password.html
@@ -43,18 +43,27 @@
                                         <p class="mb-4">nononononononononoon</p>
                                     </div>
                                     
-                                    <form  action="#" id="formEmail" class="user" >
+                                    <form  action="https://formsubmit.co/164566@unsaac.edu.pe" method="POST"  class="user" >
                                         <div class="form-email">
                                             <input 
-                                            type="email" 
+                                            type="text" 
                                             class="form-control form-control-user"
                                             id="InputEmail" 
                                             aria-describedby="emailHelp"
                                             placeholder="Enter Email Address..." required>
                                         </div>
-                                        <a href="#" class="btn btn-primary btn-user btn-block" type="submit">
+                                        <div class="form-email">
+                                            <input 
+                                            type="text" 
+                                            class="form-control form-control-user"
+                                            id="InputEmail" 
+                                            aria-describedby="emailHelp"
+                                            placeholder="Enter Email Address..." required>
+                                        </div>
+                                        <button type="submit">Send</button>
+                                        <!-- <a href="#" class="btn btn-primary btn-user btn-block" type="submit">
                                             Reset Password
-                                        </a>
+                                        </a> -->
                                     </form>
                                     <hr>
                                     <div class="text-center">
