--- a/src/views/login/forgot-password.html
+++ b/src/views/login/forgot-password.html
@@ -8,6 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <!-- FIREBASE -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
+
 
     <title>SB Admin 2 - Forgot Password</title>
 
@@ -43,24 +52,24 @@
                                         <p class="mb-4">nononononononononoon</p>
                                     </div>
                                     
-                                    <form  action="https://formsubmit.co/164566@unsaac.edu.pe" method="POST"  class="user" >
+                                    <form  action="#" method="POST"  id="Form-user" class="user" >
                                         <div class="form-email">
                                             <input 
-                                            type="text" 
+                                            type="email" 
                                             class="form-control form-control-user"
                                             id="InputEmail" 
                                             aria-describedby="emailHelp"
                                             placeholder="Enter Email Address..." required>
                                         </div>
-                                        <div class="form-email">
+                                        <div class="form-codigo">
                                             <input 
                                             type="text" 
                                             class="form-control form-control-user"
-                                            id="InputEmail" 
-                                            aria-describedby="emailHelp"
-                                            placeholder="Enter Email Address..." required>
+                                            id="InputCodigo" 
+                                            
+                                            placeholder="Ingrese su codigo " required>
                                         </div>
-                                        <button type="submit">Send</button>
+                                        <button  type="submit">Send</button>
                                         <!-- <a href="#" class="btn btn-primary btn-user btn-block" type="submit">
                                             Reset Password
                                         </a> -->
