aun no funciona :'v

--- a/src/views/docente/contenido_academico.html
+++ b/src/views/docente/contenido_academico.html
@@ -48,6 +48,13 @@
           <div class="Asist-container">
             <div class="columna">
               <form id="formCargaContenidoAca" class="form" role="form" autocomplete="off">
+                  <h1> Agregar/modificar temas</h1>
+                  <input type="text" id="tema" placeholder="tema" class="form-control my-3">
+                  <input type="date" id="fecha" class="form-control my-3">
+                  <input type="number" id="horas_real" placeholder="horas dictadas" class="form-control my-3">
+                  <input type="text" id="observaciones" placeholder="observaciones" class="form-control my-3">
+                  <button id="botton" class="btn btn-info" onclick="guardar()"> Guardar </button>
+                  <h1> subir temas</h1>
                   <div class="container card p-3">
                       <div class="card-header p-2">
                           <h4>Subir Contenido Academico</h4>
