Reporte Horas docente

--- a/src/views/docente/main.css
+++ b/src/views/docente/main.css
@@ -30,6 +30,7 @@ body {
 .main .columna {
   padding-left: 20px;
   padding-right: 30px;
+  width: 879px;
 }
 /*color de los botones*/
 .button.is-success {
