--- a/src/views/docente/reporte_avance.html
+++ b/src/views/docente/reporte_avance.html
@@ -12,7 +12,7 @@
       <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
       
       <script src="https://unpkg.com/read-excel-file@4.x/bundle/read-excel-file.min.js"></script>
-      <title>Contenido Academico</title>
+      <title>Reporte avanze</title>
       
       <!-- FIREBASE -->
       <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -66,42 +66,10 @@
     <main  class="main col">
       <div class="row justify-content-center align-content-center text-center">
           <div class="columna col-lg-6">
-            <div class="Asist-container">
-              <div class="columna">
-                <form id="formCargaContenidoAca" class="form" role="form" autocomplete="off">
-                  
-                    <h1> subir temas</h1>
-                    <div class="container card p-3">
-                        <div class="card-header p-2">
-                            <h4>Subir Contenido Academico</h4>
-                        </div>
-                        <div>
-                            <input type="file" id="inputfile-ContenidoAca" class="p-2">
-                        </div>
-                    </div>
-                    <div class="table-responsive">
-                        <table id="prelista-ContenidoAca" class="table table-bordered table-hover table-striped">   
+            comparativa entre planificado y avanzado
+                        <table id="lista-temas-informe"
+                            class="table table-bordered table-hover table-striped">
                         </table>
-                    </div>
-                    <button id="btn-cargar-ContenidoAca" class="btn btn-primary p-2" type="submit">
-                        Cargar
-                    </button>
-  
-                    <form id="formBotonDescargarArchivo" method="get" action="file.doc">
-                      <a href="../docente/pruebacontenido.xlsx" download="pruebacontenido.xlsx">Descargar Archivo modelo</a>
-                   </form>
-  
-  
-                </form>
-              </div>
-              <table class="table" id="tablaTitulo">
-                             
-                  <table id="lista-temas"
-                      class="table table-bordered table-hover table-striped">
-                  </table>
-                </table>
-                
-            </div>
           </div>
       </div>
       
@@ -124,7 +92,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script type="text/javascript"src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <script type="module" src="../../database/docente/Contenido.js"></script>
+    <script type="module" src="../../database/docente/reporte_avanze.js"></script>
 
   </body>
 </html>
