--- a/src/views/login/forgot-password.html
+++ b/src/views/login/forgot-password.html
@@ -69,7 +69,7 @@
                                             
                                             placeholder="Ingrese su codigo " required>
                                         </div>
-                                        <button  type="submit">Send</button>
+                                        <button class="btn btn-primary btn-user btn-block" type="submit">Send</button>
                                         <!-- <a href="#" class="btn btn-primary btn-user btn-block" type="submit">
                                             Reset Password
                                         </a> -->
