--- a/src/views/docente/configuracion.html
+++ b/src/views/docente/configuracion.html
@@ -98,7 +98,7 @@
                                                 class="col-lg-3 col-form-label form-control-label">Contraseña</label>
                                             <div class="col-lg-9">
                                                 <input type="password" id="password"
-                                                    placeholder="Contraseña" class="form-control">
+                                                    placeholder="Contraseña" class="form-control" required>
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -106,7 +106,7 @@
                                                 class="col-lg-3 col-form-label form-control-label">Regimen</label>
                                             <div class="col-lg-9">
                                                 <input type="text" id="regimen" placeholder="Regimen"
-                                                    class="form-control">
+                                                    class="form-control" required>
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -114,7 +114,7 @@
                                                 class="col-lg-3 col-form-label form-control-label">Categoria</label>
                                             <div class="col-lg-9">
                                                 <input type="text" name="categoria" class="form-control"
-                                                    list="categoria" placeholder="Categoría" multiple>
+                                                    list="categoria" placeholder="Categoría" multiple >
                                                 <datalist id="categoria">
                                                     <option value="Nombrado">
                                                     <option value="Contratado">
