--- a/src/views/docente/configuracion.html
+++ b/src/views/docente/configuracion.html
@@ -109,7 +109,7 @@
                                                     class="form-control" required>
                                             </div>
                                         </div>
-                                        <div class="form-group row">
+                                        <!-- <div class="form-group row">
                                             <label
                                                 class="col-lg-3 col-form-label form-control-label">Categoria</label>
                                             <div class="col-lg-9">
@@ -120,7 +120,7 @@
                                                     <option value="Contratado">
                                                 </datalist>
                                             </div>
-                                        </div>
+                                        </div>  -->
                                         <div class="modal-footer">
                                             <button type="submit" class="btn btn-primary">GUARDAR</button>
                                         </div>
