--- a/src/views/login/forgot-password.html
+++ b/src/views/login/forgot-password.html
@@ -16,7 +16,12 @@
     https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-firestore.js"></script>
-
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+	<script type="text/javascript">
+		(function() {
+		emailjs.init("user_2fx7q9qBbPuD4nNNMS8Py");
+		})();
+	</script>
 
     <title>SB Admin 2 - Forgot Password</title>
 
@@ -49,37 +54,38 @@
                                 <div class="p-5">
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-2">Olvidaste tu contraseña?</h1>
-                                        <p class="mb-4">nononononononononoon</p>
+                                        <p class="mb-4">porfavor ingrese su codigo y correo eletronico para poder enviar su contraseña</p>
                                     </div>
                                     
-                                    <form  action="#" method="POST"  id="Form-user" class="user" >
-                                        <div class="form-email">
+                                    
+                                        
                                             <input 
                                             type="email" 
                                             class="form-control form-control-user"
                                             id="InputEmail" 
                                             aria-describedby="emailHelp"
                                             placeholder="Enter Email Address..." required>
-                                        </div>
-                                        <div class="form-codigo">
+                                        
+                                        
                                             <input 
                                             type="text" 
                                             class="form-control form-control-user"
                                             id="InputCodigo" 
                                             
                                             placeholder="Ingrese su codigo " required>
-                                        </div>
-                                        <button class="btn btn-primary btn-user btn-block" type="submit">Send</button>
+                                        
+                                        
                                         <!-- <a href="#" class="btn btn-primary btn-user btn-block" type="submit">
                                             Reset Password
                                         </a> -->
-                                    </form>
+                                    
+                                    <button class="btn btn-primary btn-user btn-block" onclick='sendMail()'>Send</button>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Create an Account!</a>
+                                        <a class="small" href="#">Create an Account!</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="login.html">Already have an account? Login!</a>
+                                        <a class="small" href="#">Already have an account? Login!</a>
                                     </div>
                                 </div>
                             </div>
@@ -92,7 +98,24 @@
         </div>
 
     </div>
-    <script src="../../database/Forgot-Pass.js"></script>
+    <script>
+        function sendMail(params){
+            var	tempParams = {
+                //to_name: document.getElementById("").value,
+                //from_name: document.getElementById("fromName").value,
+                email: document.getElementById("InputEmail").value,
+                message: document.getElementById("InputCodigo").value,		
+            };
+        
+            emailjs.send('gmail','email_bruno',tempParams)
+            .then(function(res){
+                console.log("success", res.status);
+            })
+        }
+    </script>
+    
+    
+    <!-- <script src="../../database/Forgot-Pass.js"></script> -->
 
 
     
