--- a/src/views/docente/configuracion.html
+++ b/src/views/docente/configuracion.html
@@ -103,9 +103,9 @@
                                         </div>
                                         <div class="form-group row">
                                             <label
-                                                class="col-lg-3 col-form-label form-control-label">Regimen</label>
+                                                class="col-lg-3 col-form-label form-control-label">codigo</label>
                                             <div class="col-lg-9">
-                                                <input type="text" id="regimen" placeholder="Regimen"
+                                                <input type="text" id="regimen" placeholder="codigo"
                                                     class="form-control" required>
                                             </div>
                                         </div>
