--- a/src/views/login/forgot-password.html
+++ b/src/views/login/forgot-password.html
@@ -109,7 +109,7 @@
         
             emailjs.send('gmail','email_bruno',tempParams)
             .then(function(res){
-                console.log("success", res.status);
+                alert("contraseña enviada");
             })
         }
     </script>
